# surface-dispersion-analysis

./: .gitignore  001surface.nb  README.md  pyproject.toml  requirements.txt  run_demo.py  run_surface.py  surfacedispersion.nb
src/surfacedispersion/: __init__.py  core.py  surface_model.py
tests/: test_core.py  test_surface_model.py
